# our-scrapy

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
our_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
